--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+        <nav class="nav-bar">
+            <ul class="option-menu">
+                <li><a href="#header">Box</a></li>
+                <li><a href="#about">How it works</a></li>
+                <li><a href="#experiments">Trust</a></li>
+                <li><a href="#contact">Contact</a> </li>
+            </ul>
+        </nav>
+    </header>
     <h1>hola</h1>
     <script src="main.js"></script>
   </body>
