--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             </ul>
         </nav>
     </header>
-    <h1>hola</h1>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
     <script src="main.js"></script>
   </body>
 </html>
