--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <section></section>
     <section></section>
     <section class ="testimonials">
+      <h1>testimonials</h1>
       <div class="slider-container">
         <div class="menu">
           <label for="slide-dot-1"></label>
@@ -51,6 +52,20 @@
             <div class="slide slide-2"></div>
           <input id="slide-dot-3" type="radio" name="slides">
             <div class="slide slide-3"></div>
+      </div>
+      <div class="companies">
+          <div class= "logo">
+            <img src="https://mbtskoudsalg.com/images/transparent-companies-logo.png" alt="">
+          </div>
+          <div class= "logo">
+            <img src="http://www.stickpng.com/assets/images/58568d224f6ae202fedf2720.png" alt="">
+          </div>
+          <div class= "logo">
+            <img src="http://www.stickpng.com/assets/images/58568d224f6ae202fedf2720.png" alt="">
+          </div>
+          <div class= "logo">
+            <img src="http://www.stickpng.com/assets/images/5a2ae7a9db68181c8f184d5d.png" alt="">
+          </div>
       </div>
     </section>
     <script src="main.js"></script>
