--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <section></section>
     <section class ="testimonials">
       <h1>testimonials</h1>
-      <div class="slider-container">
-        <div class="menu">
+      <div class="carrousel-container">
+        <div class="dots-menu">
           <label for="slide-dot-1"></label>
           <label for="slide-dot-2"></label>
           <label for="slide-dot-3"></label>
