added product section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         </ul>
       </nav>
     </header>
-
     <section class="banner">
       <div class="slider">
         <ul>
@@ -36,9 +35,9 @@
         </ul>
       </div>
     </section>
-
-    <section></section>
-
+    <section class = "products">
+      <img src="" alt="">
+    </section>
     <section class="how-it-works">
       <h2>How it works</h2>
       <article class="service-box">
